Recover SISU integration server endpoints
(cherry picked from commit 7f58be6656800515ac622242abf07d2072901621)
